--- a/.env
+++ b/.env
@@ -1,3 +1,13 @@
 PORT=5000
 MONGO_URI=mongodb+srv://anshikasinghal109:BuiqTIqjzMC5PTdL@cluster0.s9fwigj.mongodb.net/myDb?retryWrites=true&w=majority
 JWT_SECRET=784587
+# {
+#   "type": "home",
+#   "label": "My Home",
+#   "fullAddress": "23, Park Street, Greenfield",
+#   "pincode": "110055",
+#   "city": "Delhi",
+#   "state": "Delhi",
+#   "country": "India",
+#   "isDefault": true
+# }
