--- a/.env
+++ b/.env
@@ -2,12 +2,13 @@ PORT=5000
 MONGO_URI=mongodb+srv://anshikasinghal109:BuiqTIqjzMC5PTdL@cluster0.s9fwigj.mongodb.net/myDb?retryWrites=true&w=majority
 JWT_SECRET=784587
 # {
-#   "type": "home",
-#   "label": "My Home",
-#   "fullAddress": "23, Park Street, Greenfield",
-#   "pincode": "110055",
-#   "city": "Delhi",
-#   "state": "Delhi",
-#   "country": "India",
-#   "isDefault": true
+
+#   "name": "Amit Singh",
+#   "mobile": "9876543210",
+#   "state": "Uttar Pradesh",
+#   "city": "Lucknow",
+#   "size": 1500,
+#   "areaUnit": "SQFT",
+#   "value": 3000000,
+#   "purpose": "SHOP"
 # }
